--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/setup-node@v2
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Run linter
         run:  eslint --ext .jsx --fix src
