--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -5,10 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
 
       - name: Install dependencies
         run: npm install
@@ -19,27 +19,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v4
 
       - name: Install dependencies
         run: npm ci
 
       - name: Run linter
-        run:  eslint --ext .jsx --fix src
+        uses: sibiraj-s/action-eslint@v4
+        with:
+          eslint_options: '--ext .jsx --fix src'
+        # run:  eslint --ext .jsx --fix src
   deploy:
     needs: [test, lint]
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+        uses: actions/setup-node@v4
 
       - name: Install dependencies
         run: npm install
