Set manual trigger

--- a/.github/workflows/show_metadata.yml
+++ b/.github/workflows/show_metadata.yml
@@ -1,5 +1,5 @@
 name: Show Metadata
-on: [issues, workflow_run]
+on: [issues, workflow_dispatch]
 jobs:
   show_metadata:
     runs-on: ubuntu-latest
