changing to correct expression

--- a/.github/workflows/show_metadata.yml
+++ b/.github/workflows/show_metadata.yml
@@ -7,4 +7,4 @@ jobs:
       - name: Show Metadata
         run: |
           echo "Details:\n"
-          echo ${{ github.event.details }}
+          echo "${{ toJSON(github) }}"
